Testing fix to AOS by inserting overflow-x to root element

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 
 html{
     font-size: 15px;
+    overflow-x: hidden;
     // scroll-behavior:smooth;
 }
 
@@ -979,30 +980,5 @@ footer{
         }
     }
 }
-
-// @media only screen and (max-width: 768px) {
-//     .aos-animate {
-  
-//       -o-transition-property: none !important;
-//       -moz-transition-property: none !important;
-//       -ms-transition-property: none !important;
-//       -webkit-transition-property: none !important;
-//       transition-property: none !important;
-  
-//       -o-transform: none !important;
-//       -moz-transform: none !important;
-//       -ms-transform: none !important;
-//       -webkit-transform: none !important;
-//       transform: none !important;
-  
-//       -webkit-animation: none !important;
-//       -moz-animation: none !important;
-//       -o-animation: none !important;
-//       -ms-animation: none !important;
-//       animation: none !important;
-//     }
-//   }
-
-
 
 
